--- a/src/App.css
+++ b/src/App.css
@@ -40,6 +40,11 @@
 .read-the-docs {
   color: #888;
 }
+
+.title {
+  font-size: 2.0em;
+  line-height: 1.1;
+}
 .random-users {
   font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
 }
